{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 305,
  "lineage": "2245fe3d-b85d-d837-6261-c6298302708d",
  "resources": [
    {
      "module": "module.host_01.module.ec2_host.module.ec2_with_kp_clone",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:339784901191:instance/i-035864a7e93220666",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d426bbbdf33dfa67",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035864a7e93220666",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049d575ddeab1210e",
            "private_dns": "ip-172-0-125-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.125.139",
            "public_dns": "ec2-54-162-92-92.compute-1.amazonaws.com",
            "public_ip": "54.162.92.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d426bbbdf33dfa67",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a99735dc6f028e89",
            "tags": {
              "Name": "test_ec2_01"
            },
            "tags_all": {
              "Name": "test_ec2_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d10aca7aeccfe577"
            ]
          },
          "dependencies": [
            "module.host_01.module.ec2_host.module.key_pair_clone.aws_key_pair.key_pair",
            "module.host_01.module.security_group_for_ec2.aws_security_group.security_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.host_01.module.security_group_for_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:security-group/sg-0d10aca7aeccfe577",
            "description": "Security Group with Ingress and Egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d10aca7aeccfe577",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test_sg_01",
            "name_prefix": "",
            "owner_id": "339784901191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_sg_01"
            },
            "tags_all": {
              "Name": "test_sg_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.host_02.module.ec2_host.module.ec2_with_kp_clone",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:339784901191:instance/i-0f247610f576ec40a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0889dc923b019e581",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f247610f576ec40a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key_02",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08828d261535d6cdc",
            "private_dns": "ip-172-0-246-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.246.247",
            "public_dns": "ec2-3-238-139-192.compute-1.amazonaws.com",
            "public_ip": "3.238.139.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0889dc923b019e581",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb46fe0b4a5bfff1",
            "tags": {
              "Name": "test_ec2_02"
            },
            "tags_all": {
              "Name": "test_ec2_02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049b2a0a5397bcb0e"
            ]
          },
          "dependencies": [
            "module.host_02.module.ec2_host.module.key_pair_clone.aws_key_pair.key_pair",
            "module.host_02.module.security_group_for_ec2.aws_security_group.security_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.host_02.module.security_group_for_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:security-group/sg-049b2a0a5397bcb0e",
            "description": "Security Group with Ingress and Egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049b2a0a5397bcb0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test_sg_02",
            "name_prefix": "",
            "owner_id": "339784901191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_sg_02"
            },
            "tags_all": {
              "Name": "test_sg_02"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.hosts[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:339784901191:instance/i-09ef6646f3b56a062",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d4f00e9d2637643",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ef6646f3b56a062",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lb_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01280f14816c20d6b",
            "private_dns": "ip-172-0-253-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.253.192",
            "public_dns": "ec2-34-201-17-203.compute-1.amazonaws.com",
            "public_ip": "34.201.17.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d4f00e9d2637643",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb46fe0b4a5bfff1",
            "tags": {
              "Name": "lb_host_0"
            },
            "tags_all": {
              "Name": "lb_host_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09566f3572dd117f8"
            ]
          },
          "dependencies": [
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.hosts[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:339784901191:instance/i-02c919fd8972d10e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0722c08cb4d10ee5c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c919fd8972d10e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lb_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0385f59c3a4d77163",
            "private_dns": "ip-172-0-210-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.210.199",
            "public_dns": "ec2-44-213-115-72.compute-1.amazonaws.com",
            "public_ip": "44.213.115.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0722c08cb4d10ee5c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb46fe0b4a5bfff1",
            "tags": {
              "Name": "lb_host_1"
            },
            "tags_all": {
              "Name": "lb_host_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09566f3572dd117f8"
            ]
          },
          "dependencies": [
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.hosts[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:339784901191:instance/i-0f52620dffc0c6908",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063e2ccffe51e88ec",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f52620dffc0c6908",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lb_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ee2fbf9a69d29ec",
            "private_dns": "ip-172-0-221-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.221.152",
            "public_dns": "ec2-44-201-50-158.compute-1.amazonaws.com",
            "public_ip": "44.201.50.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063e2ccffe51e88ec",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb46fe0b4a5bfff1",
            "tags": {
              "Name": "lb_host_2"
            },
            "tags_all": {
              "Name": "lb_host_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09566f3572dd117f8"
            ]
          },
          "dependencies": [
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.attachments[\"0\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81-2025050511443712350000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
            "target_id": "i-09ef6646f3b56a062"
          },
          "dependencies": [
            "module.lb_deploy.module.hosts.aws_instance.ec2",
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.attachments[\"1\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81-2025050511443760850000000b",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
            "target_id": "i-02c919fd8972d10e1"
          },
          "dependencies": [
            "module.lb_deploy.module.hosts.aws_instance.ec2",
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.attachments[\"2\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81-2025050511443791910000000c",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
            "target_id": "i-0f52620dffc0c6908"
          },
          "dependencies": [
            "module.lb_deploy.module.hosts.aws_instance.ec2",
            "module.lb_deploy.module.key_pair_for_host.aws_key_pair.key_pair",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.lb_deploy.module.security_group_for_hosts.aws_security_group.security_group",
            "module.lb_deploy.random_integer.pick_index",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:loadbalancer/app/lb-test-01/eb6429c64fbfc6d9",
            "arn_suffix": "app/lb-test-01/eb6429c64fbfc6d9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-test-01-1303465056.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:loadbalancer/app/lb-test-01/eb6429c64fbfc6d9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-test-01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da96ee645de1a98a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a99735dc6f028e89"
              },
              {
                "subnet_id": "subnet-0cb46fe0b4a5bfff1"
              }
            ],
            "subnets": [
              "subnet-0a99735dc6f028e89",
              "subnet-0cb46fe0b4a5bfff1"
            ],
            "tags": {
              "Name": "lb-test-01"
            },
            "tags_all": {
              "Name": "lb-test-01"
            },
            "vpc_id": "vpc-06f579c2c7152f998",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.lb_deploy.module.load_balanced.module.security_group.aws_security_group.security_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.listeners[\"2700\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/fec828ea543f1c7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/fec828ea543f1c7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:loadbalancer/app/lb-test-01/eb6429c64fbfc6d9",
            "mutual_authentication": [],
            "port": 2700,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "listener_2700"
            },
            "tags_all": {
              "Name": "listener_2700"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_deploy.module.load_balanced.module.lb.aws_lb.lb",
            "module.lb_deploy.module.load_balanced.module.security_group.aws_security_group.security_group",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.listeners[\"443\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/90fd356493e5e649",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/90fd356493e5e649",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:loadbalancer/app/lb-test-01/eb6429c64fbfc6d9",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "listener_443"
            },
            "tags_all": {
              "Name": "listener_443"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_deploy.module.load_balanced.module.lb.aws_lb.lb",
            "module.lb_deploy.module.load_balanced.module.security_group.aws_security_group.security_group",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.listeners[\"80\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/30d77350a459388f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:listener/app/lb-test-01/eb6429c64fbfc6d9/30d77350a459388f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:loadbalancer/app/lb-test-01/eb6429c64fbfc6d9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "listener_80"
            },
            "tags_all": {
              "Name": "listener_80"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_deploy.module.load_balanced.module.lb.aws_lb.lb",
            "module.lb_deploy.module.load_balanced.module.security_group.aws_security_group.security_group",
            "module.lb_deploy.module.load_balanced.module.target_group.aws_lb_target_group.target_group",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:security-group/sg-0da96ee645de1a98a",
            "description": "Security Group with Ingress and Egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da96ee645de1a98a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2700,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg_01",
            "name_prefix": "",
            "owner_id": "339784901191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_sg_01"
            },
            "tags_all": {
              "Name": "lb_sg_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.load_balanced.module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
            "arn_suffix": "targetgroup/target-group-01/cf80bca482d8ca81",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339784901191:targetgroup/target-group-01/cf80bca482d8ca81",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-01"
            },
            "tags_all": {
              "Name": "target-group-01"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_deploy.module.security_group_for_hosts",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:security-group/sg-09566f3572dd117f8",
            "description": "Security Group with Ingress and Egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09566f3572dd117f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_host_sg",
            "name_prefix": "",
            "owner_id": "339784901191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_host_sg"
            },
            "tags_all": {
              "Name": "lb_host_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat_gateway_test.module.elastic_ip_clone",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090405d9a06d62c93",
            "arn": "arn:aws:ec2:us-east-1:339784901191:elastic-ip/eipalloc-090405d9a06d62c93",
            "domain": "vpc",
            "id": "eipalloc-090405d9a06d62c93",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-12-160.compute-1.amazonaws.com",
            "public_ip": "3.215.12.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "test elastic_ip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway_test.module.nat_gateway_default",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090405d9a06d62c93",
            "association_id": "eipassoc-0bb9a7a4f37323fee",
            "connectivity_type": "public",
            "id": "nat-06d1c9366bb3a31fc",
            "network_interface_id": "eni-0f33e056d2e50d5f4",
            "private_ip": "172.0.91.169",
            "public_ip": "3.215.12.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a99735dc6f028e89",
            "tags": {
              "Name": "test_nat_gateway"
            },
            "tags_all": {
              "Name": "test_nat_gateway"
            }
          },
          "dependencies": [
            "module.nat_gateway_test.module.elastic_ip_clone.aws_eip.elastic_ip",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_test.module.route_rtb_privates[\"0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020a2d6c95d19fd811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d1c9366bb3a31fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020a2d6c95d19fd81",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_test.module.elastic_ip_clone.aws_eip.elastic_ip",
            "module.nat_gateway_test.module.nat_gateway_default.aws_nat_gateway.nat_gateway",
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_user.module.security_group_for_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:security-group/sg-041c0efa9f0bb78ee",
            "description": "Security Group with Ingress and Egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041c0efa9f0bb78ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_01",
            "name_prefix": "",
            "owner_id": "339784901191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_01"
            },
            "tags_all": {
              "Name": "rds_security_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_template",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02baf873f86e55484",
            "route_table_id": "rtb-020a2d6c95d19fd81",
            "subnet_id": "subnet-00a8b230ea2f440f0"
          },
          "dependencies": [
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090651927bcc76ce6",
            "route_table_id": "rtb-020a2d6c95d19fd81",
            "subnet_id": "subnet-0d202649901c9b790"
          },
          "dependencies": [
            "module.vpc_template.module.route_table_private.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_template",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c190a018616b6e",
            "route_table_id": "rtb-041282692609a35ff",
            "subnet_id": "subnet-0a99735dc6f028e89"
          },
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e358405704b60391",
            "route_table_id": "rtb-041282692609a35ff",
            "subnet_id": "subnet-0cb46fe0b4a5bfff1"
          },
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.route_table_public.aws_route_table.route_table",
            "module.vpc_template.module.subnets_clone.aws_subnet.subnet",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_template.module.i_gateway_clone",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:internet-gateway/igw-01adcfe296658c39f",
            "id": "igw-01adcfe296658c39f",
            "owner_id": "339784901191",
            "tags": {
              "Environment": "dev",
              "Name": "test_gateway_01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test_gateway_01"
            },
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.route_table_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:route-table/rtb-020a2d6c95d19fd81",
            "id": "rtb-020a2d6c95d19fd81",
            "owner_id": "339784901191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "private_route_table_01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private_route_table_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:route-table/rtb-041282692609a35ff",
            "id": "rtb-041282692609a35ff",
            "owner_id": "339784901191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01adcfe296658c39f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public_route_table_01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public_route_table_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_template.module.i_gateway_clone.aws_internet_gateway.internet_gateway",
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.subnets_clone[\"private_subnet_01\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:subnet/subnet-00a8b230ea2f440f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a8b230ea2f440f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339784901191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_01"
            },
            "tags_all": {
              "Name": "private_subnet_01"
            },
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.subnets_clone[\"private_subnet_02\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:subnet/subnet-0d202649901c9b790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d202649901c9b790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339784901191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_02"
            },
            "tags_all": {
              "Name": "private_subnet_02"
            },
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.subnets_clone[\"public_subnet_01\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:subnet/subnet-0a99735dc6f028e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99735dc6f028e89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339784901191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_01"
            },
            "tags_all": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.subnets_clone[\"public_subnet_02\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:subnet/subnet-0cb46fe0b4a5bfff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb46fe0b4a5bfff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339784901191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_02"
            },
            "tags_all": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-06f579c2c7152f998"
          },
          "dependencies": [
            "module.vpc_template.module.vpc_with_full_structure.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_template.module.vpc_with_full_structure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339784901191:vpc/vpc-06f579c2c7152f998",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0ed69c216f4d1b677",
            "default_route_table_id": "rtb-0f2c49b2ede67e268",
            "default_security_group_id": "sg-09ee1d85d3ebe9bfd",
            "dhcp_options_id": "dopt-0c0b9b6e013a0d29a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f579c2c7152f998",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2c49b2ede67e268",
            "owner_id": "339784901191",
            "tags": {
              "Name": "test_vpc_01"
            },
            "tags_all": {
              "Name": "test_vpc_01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}